// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot 1`] = `
<div>
  <mdc-button
    class="md-reaction-badge-wrapper"
    color="default"
    data-btn-type="pill"
    data-count="1"
    data-reacted="false"
    role="button"
    size="24"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    <div
      class="md-reaction-wrapper md-icon-scales md-reaction-loaded"
      data-scale="12"
    >
      <mdc-animation
        data-name="haha"
        name="haha"
      />
    </div>
    <span
      class="reaction-badge-count"
    />
  </mdc-button>
</div>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with className 1`] = `
<div>
  <mdc-button
    class="example-class md-reaction-badge-wrapper"
    color="default"
    data-btn-type="pill"
    data-count="1"
    data-reacted="false"
    role="button"
    size="24"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    <div
      class="md-reaction-wrapper md-icon-scales md-reaction-loaded"
      data-scale="12"
    >
      <mdc-animation
        data-name="haha"
        name="haha"
      />
    </div>
    <span
      class="reaction-badge-count"
    />
  </mdc-button>
</div>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with count 1`] = `
<div>
  <mdc-button
    class="md-reaction-badge-wrapper"
    color="default"
    data-btn-type="pill"
    data-count="1"
    data-reacted="false"
    role="button"
    size="24"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    <div
      class="md-reaction-wrapper md-icon-scales md-reaction-loaded"
      data-scale="12"
    >
      <mdc-animation
        data-name="haha"
        name="haha"
      />
    </div>
    <span
      class="reaction-badge-count"
    >
      1
    </span>
  </mdc-button>
</div>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with id 1`] = `
<div>
  <mdc-button
    class="md-reaction-badge-wrapper"
    color="default"
    data-btn-type="pill"
    data-count="1"
    data-reacted="false"
    id="example-id"
    role="button"
    size="24"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    <div
      class="md-reaction-wrapper md-icon-scales md-reaction-loaded"
      data-scale="12"
    >
      <mdc-animation
        data-name="haha"
        name="haha"
      />
    </div>
    <span
      class="reaction-badge-count"
    />
  </mdc-button>
</div>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with reacted 1`] = `
<div>
  <mdc-button
    class="md-reaction-badge-wrapper"
    color="default"
    data-btn-type="pill"
    data-count="1"
    data-reacted="true"
    role="button"
    size="24"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    <div
      class="md-reaction-wrapper md-icon-scales md-reaction-loaded"
      data-scale="12"
    >
      <mdc-animation
        data-name="haha"
        name="haha"
      />
    </div>
    <span
      class="reaction-badge-count"
    />
  </mdc-button>
</div>
`;

exports[`<ReactionBadge name="haha" /> snapshot should match snapshot with style 1`] = `
<div>
  <mdc-button
    class="md-reaction-badge-wrapper"
    color="default"
    data-btn-type="pill"
    data-count="1"
    data-reacted="false"
    role="button"
    size="24"
    style="color: pink;"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    <div
      class="md-reaction-wrapper md-icon-scales md-reaction-loaded"
      data-scale="12"
    >
      <mdc-animation
        data-name="haha"
        name="haha"
      />
    </div>
    <span
      class="reaction-badge-count"
    />
  </mdc-button>
</div>
`;
